--- a/Data Structures and Algorithms - Concepts/Linked Lists.ipynb
+++ b/Data Structures and Algorithms - Concepts/Linked Lists.ipynb
@@ -206,8 +206,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n"
+    "def LinkedList(node, pointer):\n",
+    "    pass"
    ]
   },
   {
