--- a/Data Structures and Algorithms - Concepts/Linked Lists.ipynb
+++ b/Data Structures and Algorithms - Concepts/Linked Lists.ipynb
@@ -243,7 +243,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.9 (tags/v3.10.9:1dd9be6, Dec  6 2022, 20:01:21) [MSC v.1934 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "3fc1479604e794d73fed5596f985261ebd8f753a0ec07b5938a9ca4472d2f808"
+   }
   }
  },
  "nbformat": 4,
