--- a/Data Structures and Algorithms - Concepts/Recursions & Backtracking.ipynb
+++ b/Data Structures and Algorithms - Concepts/Recursions & Backtracking.ipynb
@@ -104,6 +104,30 @@
     "str=\"abc\"\n",
     "printPerm(str,\"\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## nth term of fibonacci seq\n",
+    "def fibo(n):\n",
+    "    if n <= 0:\n",
+    "        return 0\n",
+    "    if n==1:\n",
+    "        return 1\n",
+    "    return fibo(n-1) + fibo(n-2)\n",
+    "\n",
+    "print(fibo(4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
